--- a/edit-macros.tex
+++ b/edit-macros.tex
@@ -105,11 +105,11 @@
 \newcommand\katznote[1]{\nbc{Dan}{#1}{darkgreen}} % add more author macros here
    \definecolor{bluegreen}{rgb}{0,0.5,0.5}
 \newcommand\kt[1]{\nbc{Kt}{#1}{bluegreen}}
-%\newcommand\XXX[1]{\nbc{XXX}{#1}{darkgray}}
+\newcommand\bc[1]{\nbc{Benoit}{#1}{purple}}
 %\newcommand\XXX[1]{\nbc{XXX}{#1}{gray}}
 %\newcommand\XXX[1]{\nbc{XXX}{#1}{olive}}
 %\newcommand\XXX[1]{\nbc{XXX}{#1}{orange}}
-%\newcommand\XXX[1]{\nbc{XXX}{#1}{purple}}
+%\newcommand\XXX[1]{\nbc{XXX}{#1}{darkgray}}
 %\newcommand\XXX[1]{\nbc{XXX}{#1}{red}}
 %\newcommand\XXX[1]{\nbc{XXX}{#1}{teal}}
 %\newcommand\XXX[1]{\nbc{XXX}{#1}{violet}}
