--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -120,7 +120,7 @@ The personal pledges expressed in this Dagstuhl Manifesto\footnote{Dagstuhl Pers
 and
 (iii) ensuring the quality and sustainability of software during its \emph{development}:
 \bc{qu: only during? or also possibly after (i.e. thorough the whole lifecycle, incl. how to set up / organize the maintenance, evolution...) ?} 
-\on{I would say that there is no "after" until the software is dead. Development these days is understood to include the whole lifecycle, I believe.}
+\on{I would say that there is no "after" until the software is dead. Development these days is understood to include the whole lifecycle, I believe.} \katznote{If I was writing this from scratch, I would say `development and maintenance'.  I don't think development does include the whole lifecycle, and we should include it.  We could also say `during its \emph{development} and complete lifecycle'.}
 
 % ----------
 \paragraph{Citation}
@@ -140,7 +140,7 @@ and
 \item I will develop software as open source from the start, whenever possible, and I will contribute to sustaining software I use and rely on.
 \item I will match proposed software engineering practices to the actual needs and resources of the project, and I will help scientists improve the quality of their software without passing judgment.
 \item I will publish the intellectual contributions of my research software, and I will document (including usage instructions, and input and output examples), package, release and archive versions of my software. \kt{Does this belong in the 'citation' bracket ? both are about dissemination-related work} \katznote{the first part of it is more close to citation, but the second part is not.  I think it better fits here.  Another option would be changing this heading to ``Development and Dissemination'', though I'm not really sure that's a better option.}\bc{I see here at least two separate pledges: 1) software lifecycle management: including proper and documented releases, packaging, etc., and 2) the intellectual property to give the appropriate credits (this belongs more on the citation part?)}
-\on{I would not separate these. I agree there are two things going on here, but I like seeing them together.}
+\on{I would not separate these. I agree there are two things going on here, but I like seeing them together.} \katznote{I'm ok with leaving them here, together.}
 \end{itemize}
 
 % ==================================================
@@ -159,11 +159,11 @@ By ``sustainability'' we mean the \emph{capacity to endure}. We define software 
 
 
 The perspective of this workshop is that of \emph{the research team developing and/or using academic software.} 
-A key role is that of the \emph{research software engineer}\footnote{Depending on the community, other terms may be used for this role, such as ``scientific IT support staff'', ``cyberinfrastructure concierge'',  or ``research infrastructure engineer.''} (RSE), the person with expertise both in academic research, and in the software engineering tools and technology needed to build the software used in the research, and to make it sustainable. 
+A key role is that of the \emph{research software engineer}\footnote{Depending on the community, other terms may be used for this role, such as ``scientific IT support staff'', ``cyberinfrastructure concierge'',  or ``research infrastructure engineer.'' In addition, this role may be functionally filled by faculty or students with appropriate expertise.} (RSE), the person with expertise both in academic research, and in the software engineering tools and technology needed to build the software used in the research, and to make it sustainable. 
 In this context it is critical that the \emph{intellectual contribution of software} be recognized and actively supported.
 
 \katznote{1. While I like the RSE title, I think there are other similar titles, perhaps used in other places, and perhaps we should mention some of them, such as Cyberinfrastructure Concierge, research infrastructure engineer, etc.  2. I think there can be a number of different types of people who have expertise in both the research field and software engineering.  Some of them are faculty.  I feel like RSEs generally have more strength in the SE part and less in the domain, while typical faculty have more in the domain and less in SE, but both can be on different points of the spectrum.}
-\on{I added the footnote. Is that enough? Should we mention the communities? (Scientific IT support has been used in Switzerland.) Do we really need to get into the role of faculty too?}
+\on{I added the footnote. Is that enough? Should we mention the communities? (Scientific IT support has been used in Switzerland.) Do we really need to get into the role of faculty too?} \katznote{I've added to the footnote - see if this is ok with you.}
 
 As software is becoming integral to our processes, the tools we use, and the output we produce, this perspective provides a starting point for a discussion that is both timely and pressing:
 
